# pyautd3_link_soem

./: .coveragerc  .gitignore  .gitmodules  MANIFEST.in  Makefile.toml  README.md  ThirdPartyNotice.txt  pyproject.toml  x.py
.github/workflows/: build.yml  pr.yml  release.yml
example/: remote_soem.py  soem.py
pyautd3_link_soem/: __init__.py  core_id.py  local.py  remote.py  status.py  thread_priority.py
pyautd3_link_soem/native_methods/: __init__.py  autd3_link_soem.py  autd3capi_link_soem.py
tests/: test_soem.py
tools/: update_bin.py
tools/wrapper-generator/src/: main.rs  python.rs
tools/wrapper-generator/src/python/: struct.rs
