[project]
name = "pyautd3_link_soem"
authors = [{ name = "Shun Suzuki", email = "suzuki@hapis.k.u-tokyo.ac.jp" }]
version = "29.0.0rc5"
description = "autd3-link-soem library wrapper for python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2", "pyautd3==29.0.0rc5"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "License :: OSI Approved :: MIT License",
]
[project.urls]
Repository = "https://github.com/shinolab/pyautd3_link_soem.git"

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
pyautd3 = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 150
exclude = [".venv", "venv"]

[tool.ruff.lint]
ignore = ["D", "SLF001", "C901", "PLR0913"]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"pyautd3_link_soem/*.py" = ["TD", "FIX002"]
"pyautd3_link_soem/native_methods/*.py" = ["ALL"]
"pyautd3_link_soem/*.pyi" = ["ALL"]
"tests/*.py" = ["S101", "T201", "ANN201", "PLR0915", "PLR2004"]
"example/*.py" = ["T201", "PLR2004", "PD901"]
"x.py" = ["S"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = 'session'

[tool.uv]
dev-dependencies = ["mypy>=1.11.2", "pytest>=8.3.3", "pytest-asyncio>=0.24.0", "pytest-xdist>=3.6.1", "ruff>=0.6.9", "pytest-cov>=5.0.0", "build>=1.2.2.post1", "wheel>=0.44.0"]
